# OpenWildfires

./: .gitignore  CONTRIBUTING.md  DRONE_CAPABILITIES.md  Dockerfile  README.md  docker-compose.yml  env.example  pyproject.toml  requirements.txt
.github/workflows/: ci-cd.yml  python-ci.yml
api/: main.py
openfire/: __init__.py  cli.py  config.py
openfire/ai/: __init__.py  analyzer.py
openfire/alerts/: __init__.py  channels.py  system.py
openfire/database/: __init__.py  connection.py  models.py
openfire/detection/: __init__.py  models.py  postprocessing.py  preprocessing.py
openfire/drone/: __init__.py  advanced_capabilities.py  controller.py
openfire/geolocation/: __init__.py  estimator.py
openfire/tasks/: __init__.py  celery_app.py
scripts/: setup.sh
tests/: __init__.py  test_detection.py
ui/: Dockerfile  README.md  package.json
